tests/integration/typecheck/fail/mismatch_record_field_access.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Bool'
# found = 'Number'
{ blo = 1 }.blo : Bool
